# theorematorbot-public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_lib.sh  requirements.txt  run.py  run_server.sh  run_tests.sh
libs/database/: database.py
libs/engine/: CMakeLists.txt  client.py  engine.py  server.cpp
libs/engine/image/: image.py
libs/engine/text/: text.py
src/: .pylintrc  __init__.py
src/button_callbacks/: common.py
src/button_callbacks/account/: deposit.py  premium.py
src/button_callbacks/operations/: templates.py
src/button_callbacks/operations/matrices/: add.py  determinant.py  diff.py  inverse.py  mult.py  transpose.py
src/button_callbacks/operations/operators/: chars.py  find_basis.py  islis.py  mlis.py  rank.py
src/command_callbacks/: admin.py  convert_handler.py  start.py
src/init/: application.py  bot_manager.py  main.py
src/jobs/: payment.py  premium.py  wrapper.py
src/managers/: global_user_data_manager.py  log_manager.py  theoremator_manager.py  user_data_manager.py  yookassa_manager.py
src/operations/: sum.py
src/screen_declaration/: account.py  main.py  matrices.py  operators.py  welcome.py
